<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/ic_speech_bubble"
        android:contentDescription="@string/chat_icon_desc"/>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="Enter a topic" />

        <Button
            android:id="@+id/btn_subscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Subscribe" />

    </LinearLayout>-->

    <!--not subscribed layout-->
    <LinearLayout
        android:id="@+id/not_subscribed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000"
            android:gravity="center"
            android:text="@string/unsubs_info"/>

        <Button
            android:id="@+id/btn_subscribe_new"
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newSubs_button"
            android:background="@drawable/login_button_background"/>

    </LinearLayout>

    <!--subscribed layout-->
    <LinearLayout
        android:id="@+id/has_subscribed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#000"
            android:text="@string/subs_info"/>

        <Button
            android:id="@+id/btn_subscribe_change"
            android:layout_width="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/topic_info"
            android:background="@drawable/login_button_background"/>

        <TextView
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="center"
            android:text="@string/subs_change"/>

    </LinearLayout>

</RelativeLayout>