<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/background_layout"
            android:orientation="vertical"
            android:weightSum="7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="3"
                android:background="@drawable/login_toplayer_background"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            <LinearLayout
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:weightSum="7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="2.25"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_img"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/logo"
                    app:civ_border_color="@color/colorPrimaryDark"
                    app:civ_border_width="3dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="4.75"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <LinearLayout
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    
                    <LinearLayout
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="300dp">

                        <TextView
                            android:gravity="center"
                            android:text="@string/login"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/username"
                                android:drawableEnd="@drawable/ic_person_black_24dp"
                                android:padding="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                android:hint="@string/userName_hint"
                                android:inputType="textPersonName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_password"
                            android:layout_marginBottom="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/password"
                                android:drawableEnd="@drawable/ic_vpn_key_black_24dp"
                                android:hint="@string/password_hint"
                                android:inputType="textPassword"
                                android:padding="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </android.support.design.widget.TextInputLayout>

                        <TextView
                            android:id="@+id/error_text"
                            android:gravity="center"
                            android:textColor="@color/light_red"
                            android:layout_marginTop="5dp"
                            android:text="@string/error_text"
                            android:visibility="gone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/login"
                            android:layout_marginBottom="15dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/login1_button_background"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/login"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>

<!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.technorio.master.techoriosmsgateway.LoginActivity">

    <ImageView
        android:id="@+id/companyLogo"
        android:src="@drawable/firm_logo"
        android:contentDescription="@string/logoDesc"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="150dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/userName_hint"
        android:background="@drawable/login_edittext_background"
        android:drawableEnd="@drawable/ic_person_black_24dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword
"
        android:background="@drawable/login_edittext_background"
        android:drawableEnd="@drawable/ic_vpn_key_black_24dp"
        android:padding="10dp"
        android:layout_width="250dp"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
-->
